style: fix button vertical alignment

--- a/docs/vanilla-js/css/style.css
+++ b/docs/vanilla-js/css/style.css
@@ -9,7 +9,7 @@ main {
     cursor: pointer;
     width: 100px;
     height: 40px;
-    float: right;
+    vertical-align: top;
     margin: 0 5px;
     text-transform: uppercase;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
